<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondapplication"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/etablissement"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/establishmentname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="64"
            android:maxLines="1"
            android:textColor="@color/White"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/operatername"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/operatorname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="64"
            android:maxLines="1"
            android:textColor="@color/White"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/chambrename"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/roomname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="64"
            android:maxLines="1"
            android:textColor="@color/White"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/disinfectiontime"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/disinfectionspinner"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/delayactivation"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/activationdelayspinner"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/settingsvalidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/validate"
            android:textSize="18sp" />

        <Button
            android:id="@+id/settingsdecline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/decline"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>