<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondapplication"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/centerpagespace"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/information_1"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/countdownactiviation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/Red"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/seconds"
            android:textColor="@color/White"
            android:textSize="20sp" />

    </LinearLayout>

    <Space
        android:id="@+id/centerpagespace"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <Space
        android:id="@+id/centerpagespace_2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_centerVertical="true" />

    <ImageButton
        android:id="@+id/stopbuttondisinfection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerpagespace_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/urgentbuttonimage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/centerpagespace"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/information_2"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/countdowndisinfection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/Green"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/minutes"
            android:textColor="@color/White"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>