<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondapplication"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/White"
                android:layout_margin="10dp"
                android:text="@string/code_security"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/PinCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_circle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/circle_on" />

                <ImageView
                    android:id="@+id/imageview_circle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/circle_on" />

                <ImageView
                    android:id="@+id/imageview_circle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/circle_on" />

                <ImageView
                    android:id="@+id/imageview_circle4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/circle_on" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkGray"
            android:orientation="vertical"
            android:visibility="invisible">

            <EditText
                android:id="@+id/EditTextEnterPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/app_name"
                android:hint="@string/app_name"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/attention" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/attention_1"
        android:textColor="@color/White"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/ButtonPinAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_button"
        android:textSize="16sp" />
</LinearLayout>